Added Module line numbers extraction to depscan